--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@ a {
 }
 
 .separator-top {
-    padding-top: 2rem;
-    margin-top: 2rem;
+    padding-top: 1em;
     border-top: #c9c9c9 1px solid;
 }
 
@@ -248,10 +247,28 @@ form.contact button:hover
 
 /* MEDIA QUERY */
 
+@media (max-width: 1700px) {
+
+    .container-small {
+        width: 40%;
+    }
+}
+
+@media (max-width: 1400px) {
+
+    .container-small {
+        width: 50%;
+    }
+}
+
 @media (max-width: 1200px) {
 
     .container {
         width: 80%;
+    }
+    
+    .container-small {
+        width: 60%;
     }
 
     .project-list {
@@ -268,7 +285,18 @@ form.contact button:hover
     }
 }
 
+@media (max-width: 960px) {
+
+    .container-small {
+        width: 80%;
+    }
+}
+
 @media (max-width: 812px) {
+
+    .container-small {
+        width: 100%;
+    }
 
     .post-meta {
         margin-top: 1em;
