--- a/css/style.css
+++ b/css/style.css
@@ -1,322 +1,317 @@
 * {
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Lucida Console;
-}
-
-textarea {
-    font-family: Lucida Console;
+  padding: 0;
+  margin: 0;
+  font-family: "Lucida Console";
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 a.default {
-    color: #acacac;
+  color: #acacac;
 }
 
 a.default:hover {
-    color: #7a7a7a;
+  color: #7a7a7a;
 }
 
 /* UTILITY */
-
 .justify {
-    text-align: justify;
+  text-align: justify;
 }
 
 .separator-bottom {
-    padding-bottom: 1em;
-    border-bottom: #c9c9c9 1px solid;
+  padding-bottom: 1em;
+  border-bottom: #c9c9c9 1px solid;
 }
 
 .separator-top {
-    padding-top: 1em;
-    border-top: #c9c9c9 1px solid;
-}
-
-.container {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.container-small {
-    width: 30%;
-    margin-left: auto;
-    margin-right: auto;
+  padding-top: 1em;
+  border-top: #c9c9c9 1px solid;
 }
 
 .clearfix::after {
-    content: '';
-    display: block;
-    clear: both;
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* CONTAINER */
+.container {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container-small {
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* CONTENT */
-
 .page-content {
-    font-size: 1.1em;
+  font-size: 1.1em;
 }
 
 .page-content .block {
-    padding: 2rem;
-    line-height: 1.4em;
+  padding: 2rem;
+  line-height: 1.4em;
 }
 
 .page-content .block > .title {
-    margin-bottom: 1.4em;
-    padding-bottom: 1em;
-    border-bottom: 1px solid #c9c9c9;
+  margin-bottom: 1.4em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #c9c9c9;
 }
 
 /* POST */
-
 .post {
-    padding: 2rem;
-    margin: 1rem;
+  padding: 2rem;
+  margin: 1rem;
 }
 
 .post * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .post .title {
-    margin-bottom: 0.3em;
+  margin-bottom: 0.3em;
 }
 
 .post .meta {
-    font-size: 0.8em;
-    padding-left: 0.1em;
+  font-size: 0.8em;
+  padding-left: 0.1em;
 }
 
 .post .meta li {
-    display: inline;
-    margin-right: 0.6em;
-    color: #acacac;
+  display: inline;
+  margin-right: 0.6em;
+  color: #acacac;
 }
 
 .post .meta li .icon {
-    padding-right: 0.4em;
+  padding-right: 0.4em;
 }
 
 .post .summary {
-    margin: 0.6em 0em;
+  margin: 0.6em 0em;
 }
 
 /* PROJECTS */
-
 .project-list {
-    width: 80%;
-    margin: 2em auto;
-    list-style: none;
-    padding: 0;
+  width: 80%;
+  margin: 2em auto;
+  list-style: none;
+  padding: 0;
 }
 
 .project-list li {
-    margin-bottom: 1em;
-    border: 1px solid #acacac;
+  margin-bottom: 1em;
+  border: 1px solid #acacac;
 }
 
 .project-list li a {
-    padding: 1em;
-    margin: 0px;
-    display: block;
-    width: 100%;
-    height: 100%;
+  padding: 1em;
+  margin: 0px;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .project-list li span {
-    color: #acacac;
-    float: right;
+  color: #acacac;
+  float: right;
 }
 
 .project-list li:hover {
-    border-color: #7a7a7a;
-    transition: .5s;
+  border-color: #7a7a7a;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .project-list li:hover span {
-    color: #7a7a7a;
-    transition: .5s;
+  color: #7a7a7a;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 /* CONTACT FORM */
-
-form.contact
-{
-    padding: .8em .8em;
-    outline: 1px solid #acacac;
-    text-align: center;
+form.contact {
+  padding: .8em .8em;
+  outline: 1px solid #acacac;
+  text-align: center;
 }
 
-form.contact .title
-{
-    text-align: left;
-    padding-bottom: 1em;
-    border-bottom: 1px solid #c9c9c9;
+form.contact .title {
+  text-align: left;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #c9c9c9;
 }
 
-form.contact section
-{
-    margin: 0.6em 0;
-    padding: 0.6em 0;
+form.contact section {
+  margin: 0.6em 0;
+  padding: 0.6em 0;
 }
 
-form.contact section label
-{
-    display: block;
-    text-align: left;
+form.contact section label {
+  display: block;
+  text-align: left;
 }
 
-form.contact section input, form.contact section textarea
-{
-    width: 100%;
-    resize: none;
-    font-size: 1em;
-    margin-top: 0.4em;
-    border: 1px solid #acacac;
+form.contact section input, form.contact section textarea {
+  width: 100%;
+  resize: none;
+  font-size: 1em;
+  font-family: "Lucida Console";
+  margin-top: 0.4em;
+  border: 1px solid #acacac;
+}
+
+form.contact section *::-webkit-input-placeholder {
+  color: #acacac;
+  opacity: 1;
+  text-transform: lowercase;
+}
+
+form.contact section *:-ms-input-placeholder {
+  color: #acacac;
+  opacity: 1;
+  text-transform: lowercase;
+}
+
+form.contact section *::-ms-input-placeholder {
+  color: #acacac;
+  opacity: 1;
+  text-transform: lowercase;
 }
 
 form.contact section *::placeholder {
-    color: #acacac;
-    opacity: 1;
-    text-transform: lowercase;
-  }
-
-form.contact button
-{
-    display: inline-block;
-    font-size: 1em;
-    background: none;
-    border: 1px solid #acacac;
-    padding: .8em 0em;
-    margin-top: .6em;
-    width: 100%;
-    text-transform: lowercase;
-    cursor: pointer;
+  color: #acacac;
+  opacity: 1;
+  text-transform: lowercase;
 }
 
-form.contact button:hover
-{
-    color: #7a7a7a;
-    border-color: #7a7a7a;
-    transition: .5s;
+form.contact button {
+  display: inline-block;
+  font-size: 1em;
+  background: none;
+  border: 1px solid #acacac;
+  padding: .8em 0em;
+  margin-top: .6em;
+  width: 100%;
+  text-transform: lowercase;
+  cursor: pointer;
+}
+
+form.contact button:hover {
+  color: #7a7a7a;
+  border-color: #7a7a7a;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 /* FOOTER */
-
 .page-footer {
-    height: 3em;
-    border-top: 1px solid #c9c9c9;
-    text-align: center;
+  height: 3em;
+  border-top: 1px solid #c9c9c9;
+  text-align: center;
 }
 
-.page-footer > .content {
-    line-height: 3em;
-    list-style: none;
-    text-transform: lowercase;
-    padding: 0;
-    margin: 0px;
+.page-footer .content {
+  line-height: 3em;
+  list-style: none;
+  text-transform: lowercase;
+  padding: 0;
+  margin: 0px;
 }
 
-.page-footer > .content li {
-    display: inline;
-    color: #acacac;
+.page-footer .content li {
+  display: inline;
+  color: #acacac;
 }
 
-.page-footer > .content li * {
-    vertical-align: middle;
+.page-footer .content li * {
+  vertical-align: middle;
 }
 
-.page-footer > .content li .icon {
-    font-size: 1.4em;
-    padding-right: 0.4em;
+.page-footer .content li .icon {
+  font-size: 1.4em;
+  padding-right: 0.4em;
 }
 
-.page-footer > .content li a:hover {
-    color: #7a7a7a;
-    transition: .5s;
+.page-footer .content li a:hover {
+  color: #7a7a7a;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
-.page-footer > .content > li:not(:last-child)::after {
-    content: "|";
-    margin: 1.25em;
+.page-footer .content li:not(:last-child)::after {
+  content: "|";
+  margin: 1.25em;
 }
 
 /* MEDIA QUERY */
-
 @media (max-width: 1700px) {
-
-    .container-small {
-        width: 40%;
-    }
+  .container-small {
+    width: 40%;
+  }
 }
 
 @media (max-width: 1400px) {
-
-    .container-small {
-        width: 50%;
-    }
+  .container-small {
+    width: 50%;
+  }
 }
 
 @media (max-width: 1200px) {
-
-    .container {
-        width: 80%;
-    }
-    
-    .container-small {
-        width: 60%;
-    }
-
-    .project-list {
-        width: 100%;
-    }
-
-    .page-footer > .content li {
-        display: block;
-    }
-
-    .page-footer > .content > li:not(:last-child)::after {
-        content: "";
-        margin: 0;
-    }
+  .container {
+    width: 80%;
+  }
+  .container-small {
+    width: 60%;
+  }
+  .project-list {
+    width: 100%;
+  }
+  .page-footer > .content li {
+    display: block;
+  }
+  .page-footer > .content > li:not(:last-child)::after {
+    content: "";
+    margin: 0;
+  }
 }
 
 @media (max-width: 960px) {
-
-    .container-small {
-        width: 80%;
-    }
+  .container-small {
+    width: 80%;
+  }
 }
 
 @media (max-width: 812px) {
-
-    .container-small {
-        width: 100%;
-    }
-
-    .post-meta {
-        margin-top: 1em;
-    }
-
-    .post-meta li {
-        display: block;
-    }
+  .container-small {
+    width: 100%;
+  }
+  .post-meta {
+    margin-top: 1em;
+  }
+  .post-meta li {
+    display: block;
+  }
 }
 
 @media (max-width: 592px) {
-
-    .container {
-        width: 100%;
-    }
+  .container {
+    width: 100%;
+  }
 }
-
+/*# sourceMappingURL=style.css.map */
