--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* COLORS */
+/* SCREEN SIZES */
+/* STYLE */
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -15,11 +18,11 @@ a {
 }
 
 a.default {
-  color: #acacac;
+  color: #bbbbbb;
 }
 
 a.default:hover {
-  color: #7a7a7a;
+  color: #999999;
 }
 
 /* UTILITY */
@@ -29,12 +32,12 @@ a.default:hover {
 
 .separator-bottom {
   padding-bottom: 1em;
-  border-bottom: #c9c9c9 1px solid;
+  border-bottom: 1px solid #dddddd;
 }
 
 .separator-top {
   padding-top: 1em;
-  border-top: #c9c9c9 1px solid;
+  border-bottom: 1px solid #dddddd;
 }
 
 .clearfix::after {
@@ -50,6 +53,24 @@ a.default:hover {
   margin-right: auto;
 }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 912px) {
+  .container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .container {
+    width: 100%;
+  }
+}
+
 .container-small {
   width: 30%;
   margin-left: auto;
@@ -57,99 +78,142 @@ a.default:hover {
 }
 
 /* NAVBAR */
-.navbar * {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  line-height: 64px;
-}
-
 .navbar {
-  background: #000000;
+  background: #111111;
   height: 64px;
   width: 100%;
 }
 
+.navbar * {
+  margin: 0;
+  padding: 0;
+  line-height: 64px;
+  list-style: none;
+  text-decoration: none;
+}
+
 .navbar .logo {
-  color: #ffffff;
-  font-size: 2em;
   margin-left: 20%;
+  color: #eeeeee;
+  font-size: 2em;
   font-weight: bold;
 }
 
-.menu {
+@media screen and (max-width: 1200px) {
+  .navbar .logo {
+    margin-left: 10%;
+  }
+}
+
+@media screen and (max-width: 912px) {
+  .navbar .logo {
+    margin-left: 2rem;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .navbar .logo {
+    margin-left: 0.8rem;
+  }
+}
+
+.navbar .menu {
   float: right;
   margin-right: 20%;
 }
 
-.menu li {
+@media screen and (max-width: 1200px) {
+  .navbar .menu {
+    margin-right: 10%;
+  }
+}
+
+@media screen and (max-width: 912px) {
+  .navbar .menu {
+    margin-right: 2rem;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 64px;
+    left: -100%;
+    background: #444444;
+    text-align: center;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .navbar .menu {
+    margin-right: 0.8rem;
+  }
+}
+
+.navbar .menu li {
   display: inline-block;
   margin: 0 5px;
 }
 
-.menu li a {
-  color: #c2c2c2;
+@media screen and (max-width: 912px) {
+  .navbar .menu li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+}
+
+.navbar .menu li a {
+  color: #eeeeee;
   font-size: 1.4em;
   padding: 7px 13px;
   text-transform: lowercase;
 }
 
-.menu li a:hover {
-  color: #ffffff;
+@media (max-width: 912px) {
+  .navbar .menu li a {
+    font-size: 20px;
+  }
+}
+
+.navbar .menu li a:hover {
+  color: #bbbbbb;
   -webkit-transition: .5s;
   transition: .5s;
 }
 
-.checkbtn {
+.navbar .menu-btn {
   font-size: 2em;
-  color: #c2c2c2;
+  color: #eeeeee;
   float: right;
-  margin-right: 40px;
+  margin-right: 2rem;
   cursor: pointer;
   display: none;
 }
 
-.checkbtn:hover {
-  color: #ffffff;
+@media screen and (max-width: 912px) {
+  .navbar .menu-btn {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .navbar .menu-btn {
+    margin-right: 0.8rem;
+  }
+}
+
+.navbar .menu-btn:hover {
+  color: #bbbbbb;
   -webkit-transition: .5s;
   transition: .5s;
 }
 
-#check {
+.navbar #menu-check {
   display: none;
 }
 
-@media (max-width: 964px) {
-  .checkbtn {
-    display: block;
-  }
-  .menu {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #3b3b3b;
-    top: 64px;
-    left: -100%;
-    text-align: center;
-    -webkit-transition: all .5s;
-    transition: all .5s;
-  }
-  .menu li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  .menu li a {
-    font-size: 20px;
-  }
-  .menu li a:hover {
-    background: none;
-    color: #ffffff;
-  }
-  #check:checked ~ .menu {
+@media screen and (max-width: 912px) {
+  .navbar #menu-check:checked ~ .menu {
     left: 0;
   }
 }
@@ -160,20 +224,24 @@ a.default:hover {
 }
 
 .page-content .block {
-  padding: 2rem;
+  padding: 2rem 0rem;
   line-height: 1.4em;
 }
 
 .page-content .block > .title {
   margin-bottom: 1.4em;
-  padding-bottom: 1em;
-  border-bottom: 1px solid #c9c9c9;
 }
 
 /* POST */
 .post {
   padding: 2rem;
   margin: 1rem;
+}
+
+@media screen and (max-width: 912px) {
+  .post {
+    padding: 2rem 0rem;
+  }
 }
 
 .post * {
@@ -186,14 +254,26 @@ a.default:hover {
 }
 
 .post .meta {
-  font-size: 0.8em;
+  font-size: .85em;
   padding-left: 0.1em;
+}
+
+@media screen and (max-width: 640px) {
+  .post .meta {
+    margin-top: 1em;
+  }
 }
 
 .post .meta li {
   display: inline;
   margin-right: 0.6em;
-  color: #acacac;
+  color: #bbbbbb;
+}
+
+@media screen and (max-width: 640px) {
+  .post .meta li {
+    display: block;
+  }
 }
 
 .post .meta li .icon {
@@ -212,32 +292,32 @@ a.default:hover {
   padding: 0;
 }
 
+@media screen and (max-width: 1200px) {
+  .project-list {
+    width: 100%;
+  }
+}
+
 .project-list li {
   margin-bottom: 1em;
-  border: 1px solid #acacac;
+  color: #666666;
+  border: 1px solid #dddddd;
 }
 
 .project-list li a {
   padding: 1em;
-  margin: 0px;
+  margin: 0em;
   display: block;
   width: 100%;
   height: 100%;
 }
 
 .project-list li span {
-  color: #acacac;
   float: right;
 }
 
 .project-list li:hover {
-  border-color: #7a7a7a;
-  -webkit-transition: .5s;
-  transition: .5s;
-}
-
-.project-list li:hover span {
-  color: #7a7a7a;
+  border-color: #666666;
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -245,14 +325,17 @@ a.default:hover {
 /* CONTACT FORM */
 form.contact {
   padding: .8em .8em;
-  outline: 1px solid #acacac;
+  outline: 1px solid #999999;
   text-align: center;
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 form.contact .title {
   text-align: left;
   padding-bottom: 1em;
-  border-bottom: 1px solid #c9c9c9;
+  border-bottom: 1px solid #bbbbbb;
 }
 
 form.contact section {
@@ -271,29 +354,29 @@ form.contact section input, form.contact section textarea {
   font-size: 1em;
   font-family: "Lucida Console";
   margin-top: 0.4em;
-  border: 1px solid #acacac;
+  border: 1px solid #999999;
 }
 
 form.contact section *::-webkit-input-placeholder {
-  color: #acacac;
+  color: #999999;
   opacity: 1;
   text-transform: lowercase;
 }
 
 form.contact section *:-ms-input-placeholder {
-  color: #acacac;
+  color: #999999;
   opacity: 1;
   text-transform: lowercase;
 }
 
 form.contact section *::-ms-input-placeholder {
-  color: #acacac;
+  color: #999999;
   opacity: 1;
   text-transform: lowercase;
 }
 
 form.contact section *::placeholder {
-  color: #acacac;
+  color: #999999;
   opacity: 1;
   text-transform: lowercase;
 }
@@ -302,7 +385,8 @@ form.contact button {
   display: inline-block;
   font-size: 1em;
   background: none;
-  border: 1px solid #acacac;
+  color: #999999;
+  border: 1px solid #999999;
   padding: .8em 0em;
   margin-top: .6em;
   width: 100%;
@@ -311,8 +395,8 @@ form.contact button {
 }
 
 form.contact button:hover {
-  color: #7a7a7a;
-  border-color: #7a7a7a;
+  color: #666666;
+  border-color: #666666;
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -320,21 +404,28 @@ form.contact button:hover {
 /* FOOTER */
 .page-footer {
   height: 3em;
-  border-top: 1px solid #c9c9c9;
   text-align: center;
+  margin-top: 2rem;
 }
 
 .page-footer .content {
+  border-top: 1px solid #dddddd;
   line-height: 3em;
   list-style: none;
   text-transform: lowercase;
-  padding: 0;
+  padding: 0px;
   margin: 0px;
 }
 
 .page-footer .content li {
   display: inline;
-  color: #acacac;
+  color: #bbbbbb;
+}
+
+@media screen and (max-width: 912px) {
+  .page-footer .content li {
+    display: block;
+  }
 }
 
 .page-footer .content li * {
@@ -347,7 +438,7 @@ form.contact button:hover {
 }
 
 .page-footer .content li a:hover {
-  color: #7a7a7a;
+  color: #999999;
   -webkit-transition: .5s;
   transition: .5s;
 }
@@ -357,59 +448,12 @@ form.contact button:hover {
   margin: 1.25em;
 }
 
-/* MEDIA QUERY */
-@media (max-width: 1700px) {
-  .container-small {
-    width: 40%;
-  }
-}
-
-@media (max-width: 1400px) {
-  .container-small {
-    width: 50%;
-  }
-}
-
-@media (max-width: 1200px) {
-  .container {
-    width: 80%;
-  }
-  .container-small {
-    width: 60%;
-  }
-  .project-list {
-    width: 100%;
-  }
-  .page-footer > .content li {
-    display: block;
-  }
-  .page-footer > .content > li:not(:last-child)::after {
+@media screen and (max-width: 912px) {
+  .page-footer .content li:not(:last-child)::after {
     content: "";
     margin: 0;
   }
 }
 
-@media (max-width: 960px) {
-  .container-small {
-    width: 80%;
-  }
-}
-
-@media (max-width: 812px) {
-  .container-small {
-    width: 100%;
-  }
-  .post-meta {
-    margin-top: 1em;
-  }
-  .post-meta li {
-    display: block;
-  }
-}
-
-@media (max-width: 592px) {
-  .container {
-    width: 100%;
-  }
-}
+/* MEDIA QUERY */
 /*# sourceMappingURL=style.css.map */
