--- a/css/style.css
+++ b/css/style.css
@@ -53,30 +53,6 @@ a.default:hover {
   margin-right: auto;
 }
 
-@media screen and (max-width: 1200px) {
-  .container {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 912px) {
-  .container {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 460px) {
-  .container {
-    width: 100%;
-  }
-}
-
-.container-small {
-  width: 30%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 /* NAVBAR */
 .navbar {
   background: #111111;
@@ -99,54 +75,9 @@ a.default:hover {
   font-weight: bold;
 }
 
-@media screen and (max-width: 1200px) {
-  .navbar .logo {
-    margin-left: 10%;
-  }
-}
-
-@media screen and (max-width: 912px) {
-  .navbar .logo {
-    margin-left: 2rem;
-  }
-}
-
-@media screen and (max-width: 460px) {
-  .navbar .logo {
-    margin-left: 0.8rem;
-  }
-}
-
 .navbar .menu {
   float: right;
   margin-right: 20%;
-}
-
-@media screen and (max-width: 1200px) {
-  .navbar .menu {
-    margin-right: 10%;
-  }
-}
-
-@media screen and (max-width: 912px) {
-  .navbar .menu {
-    margin-right: 2rem;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 64px;
-    left: -100%;
-    background: #444444;
-    text-align: center;
-    -webkit-transition: all .5s;
-    transition: all .5s;
-  }
-}
-
-@media screen and (max-width: 460px) {
-  .navbar .menu {
-    margin-right: 0.8rem;
-  }
 }
 
 .navbar .menu li {
@@ -154,25 +85,11 @@ a.default:hover {
   margin: 0 5px;
 }
 
-@media screen and (max-width: 912px) {
-  .navbar .menu li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-}
-
 .navbar .menu li a {
   color: #eeeeee;
   font-size: 1.4em;
   padding: 7px 13px;
   text-transform: lowercase;
-}
-
-@media (max-width: 912px) {
-  .navbar .menu li a {
-    font-size: 20px;
-  }
 }
 
 .navbar .menu li a:hover {
@@ -190,18 +107,6 @@ a.default:hover {
   display: none;
 }
 
-@media screen and (max-width: 912px) {
-  .navbar .menu-btn {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 460px) {
-  .navbar .menu-btn {
-    margin-right: 0.8rem;
-  }
-}
-
 .navbar .menu-btn:hover {
   color: #bbbbbb;
   -webkit-transition: .5s;
@@ -210,12 +115,6 @@ a.default:hover {
 
 .navbar #menu-check {
   display: none;
-}
-
-@media screen and (max-width: 912px) {
-  .navbar #menu-check:checked ~ .menu {
-    left: 0;
-  }
 }
 
 /* CONTENT */
@@ -238,12 +137,6 @@ a.default:hover {
   margin: 1rem;
 }
 
-@media screen and (max-width: 912px) {
-  .post {
-    padding: 2rem 0rem;
-  }
-}
-
 .post * {
   margin: 0px;
   padding: 0px;
@@ -258,22 +151,10 @@ a.default:hover {
   padding-left: 0.1em;
 }
 
-@media screen and (max-width: 640px) {
-  .post .meta {
-    margin-top: 1em;
-  }
-}
-
 .post .meta li {
   display: inline;
   margin-right: 0.6em;
   color: #bbbbbb;
-}
-
-@media screen and (max-width: 640px) {
-  .post .meta li {
-    display: block;
-  }
 }
 
 .post .meta li .icon {
@@ -290,12 +171,6 @@ a.default:hover {
   margin: 2em auto;
   list-style: none;
   padding: 0;
-}
-
-@media screen and (max-width: 1200px) {
-  .project-list {
-    width: 100%;
-  }
 }
 
 .project-list li {
@@ -422,12 +297,6 @@ form.contact button:hover {
   color: #bbbbbb;
 }
 
-@media screen and (max-width: 912px) {
-  .page-footer .content li {
-    display: block;
-  }
-}
-
 .page-footer .content li * {
   vertical-align: middle;
 }
@@ -448,12 +317,81 @@ form.contact button:hover {
   margin: 1.25em;
 }
 
-@media screen and (max-width: 912px) {
-  .page-footer .content li:not(:last-child)::after {
-    content: "";
-    margin: 0;
+/* MEDIA QUERIES */
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 80%;
+  }
+  .navbar .logo {
+    margin-left: 10%;
+  }
+  .navbar .menu {
+    margin-right: 10%;
+  }
+  .project-list {
+    width: 100%;
   }
 }
 
-/* MEDIA QUERY */
+@media screen and (max-width: 912px) {
+  .container {
+    width: 80%;
+  }
+  .navbar .logo {
+    margin-left: 2rem;
+  }
+  .navbar .menu {
+    margin-right: 2rem;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 64px;
+    left: -100%;
+    background: #444444;
+    text-align: center;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
+  .navbar .menu li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  .navbar .menu li a {
+    font-size: 20px;
+  }
+  .navbar .menu-btn {
+    display: block;
+  }
+  .navbar #menu-check:checked ~ .menu {
+    left: 0;
+  }
+  .post {
+    padding: 2rem 0rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .post .meta {
+    margin-top: 1em;
+  }
+  .post .meta li {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .container {
+    width: 100%;
+  }
+  .navbar .logo {
+    margin-left: 0.8rem;
+  }
+  .navbar .menu {
+    margin-right: 0.8rem;
+  }
+  .navbar .menu-btn {
+    margin-right: 0.8rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
