--- a/css/style.scss
+++ b/css/style.scss
@@ -201,6 +201,26 @@ a {
     }
 }
 
+/* POST DETAIL */
+.post-detail {
+
+    .meta {
+        font-size: .85em;
+        padding-left: 0.1em;
+
+        li {
+            display: inline;
+            margin-right: 0.6em;
+            color: $color-lighter;
+
+            .icon {
+                padding-right: 0.4em;
+            }
+        }
+    }
+
+}
+
 /* PROJECTS */
 .project-list {
     width: 80%;
@@ -236,7 +256,7 @@ a {
 form.contact
 {
     padding: .8em .8em;
-    outline: 1px solid $color-light;
+    border: 1px solid $color-light;
     text-align: center;
     max-width: 480px;
     margin-left: auto;
@@ -244,22 +264,21 @@ form.contact
 
     .title {
         text-align: left;
-        padding-bottom: 1em;
-        border-bottom: 1px solid $color-lighter;
     }
 
     section {
         margin: 0.6em 0;
         padding: 0.6em 0;
+        text-align: left;
 
         label {
             display: block;
-            text-align: left;
         }
 
         input, textarea {
             width: 100%;
             resize: none;
+            line-height: 1.1em;
             font-size: 1em;
             font-family: $font-family;
             margin-top: 0.4em;
@@ -267,9 +286,9 @@ form.contact
         }
 
         *::placeholder {
+            text-transform: lowercase;
             color: $color-light;
             opacity: 1;
-            text-transform: lowercase;
         }
     }
 
